syntax = "proto3";

option go_package = "./;proto";

service UserSVC {
    rpc GetUserList(PageInfoRequest) returns (UserListInfoResponse);
    rpc GetUserByEmail(EmailRequest) returns (UserInfoResponse);
    rpc GetUserById(IdRequest) returns (UserInfoResponse);
    rpc CreateUser(CreateUserInfoRequest) returns (UserInfoResponse);
    rpc UpdateUser(UpdateUserInfoRequest) returns (Empty);
    rpc ComparePassword(ComparePasswordRequest) returns (BoolResponse);
}
message Empty {

}
message BoolResponse{
    bool result = 1;
}
message ComparePasswordRequest {
    string password = 1;
    string encryptPwd = 2;
}
message EmailRequest {
    string email = 1;
}

message IdRequest {
    uint64  id = 1;
}

message UserInfoResponse {
    uint64  id = 1;
    string password = 2;
    string email = 3;
    string nickName = 4;
    uint64 birthday = 5;
    string gender = 6;
    string address = 7;
    int32 role = 8;
}

message UserListInfoResponse {
    uint64 total = 1;
    repeated UserInfoResponse userData = 2;
}

message CreateUserInfoRequest {
    string nickName = 1;
    string email = 2;
    string password = 3;
}

message UpdateUserInfoRequest {
    uint64 id = 1;
    string nickName = 2;
    string gender = 3;
    uint64 birthday = 4;
    string address = 5;
}

message PageInfoRequest {
    uint32 pageNumber = 1;
    uint32 pageSize = 2;
}